# domain

./: .commitlintrc.json  .env.example  .gitignore  .personas-baseline.json  AGENTS.md  CHANGELOG.md  INSTALL.md  Makefile  NOTA-elicitation-hallazgo.md  ONBOARDING.md  PLAN-code-graph-multilenguaje.md  README.md  docker-compose.yml  go.mod  go.sum  install.sh  opencode.json  setup-vm.sh  test-vps-libvirt.sh  test-vps-local.sh
.claude/: instructions.md
.playwright-mcp/: page-2026-06-12T03-19-55-714Z.yml  page-2026-06-12T03-20-55-852Z.yml  page-2026-06-12T03-22-50-716Z.yml  page-2026-06-12T03-24-13-546Z.yml  render_portal.js
caddy/: Caddyfile  docker-compose.yml
docs/: ERRORES-sesion-2026-07-09-para-replicar.md  GETTING_STARTED.md  RECOMENDACIONES-mejoras-desde-guia-fable-5.md  SPEC-design-system-skill-por-proyecto.md  SPEC-fable5-pendientes-R1-R6-R8.md  SPEC-installer-backups-rotacion.md  personas.md  roadmap.md  testing-workflow.md
domain-backend/: .dockerignore  .goreleaser.yml  .stateless-allowed.yaml  Dockerfile  Makefile  diagrams.html  docker-compose.yml  flujo.mmd  install.sh  mermaid-editor-snapshot.md
domain-backend/sdks/python/: README.md  pyproject.toml
domain-frontend/: nginx.conf
install-user/: .gitignore  Makefile  README.md  bootstrap.ps1  bootstrap.sh  claude_hook.go  claude_hook_test.go  claude_md_excludes.go  claude_md_excludes_test.go  claude_permissions.go  claude_permissions_test.go  clients.go  clients_test.go  doctor.go  doctor_config.go  doctor_hooks.go  doctor_mcp.go  doctor_opencode.go  doctor_opencode_test.go  doctor_test.go  go.mod  (+24 more)
(+5906 files in other folders)
